Fix layout issues on GitHub Pages

--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Space Grotesk", sans-serif;;
+   
 }
+
 body{
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg, rgb(40, 37, 38) 0%, rgba(0, 0, 0, 1) 100%)
+    background: linear-gradient(90deg, rgb(40, 37, 38) 0%, rgba(0, 0, 0, 1) 100%);
+    font-family: "Space Grotesk", sans-serif;;
    
 }
 .main-container{
